BU_Parser/main.output
Nonterminals useless in grammar

   calclist
   exp
   factor
   term


Terminals unused in grammar

   NUMBER
   STRING
   CHAR_CONST
   ADD
   SUB
   MUL
   DIV
   ABS
   MOD
   LEQ
   GEQ
   EQUAL_TO
   ASSIGN
   NOT
   UNSIGNED
   AND
   OR
   BITWISE_AND
   BITWISE_OR
   BITWISE_XOR
   OP
   CP
   LB
   RB
   INCREMENT
   DECREMENT
   EOL
   COLON
   PERIOD
   COMMA
   INT
   FLOAT
   CHAR
   DOUBLE
   IF
   ELSE
   WHILE
   FOR
   DO
   RETURN


Rules useless in grammar

    2 calclist: %empty
    3         | calclist exp EOL
    4         | calclist EOL

    5 exp: factor
    6    | exp ADD exp
    7    | exp SUB factor
    8    | exp ABS factor

    9 factor: term
   10       | factor MUL term
   11       | factor DIV term

   12 term: NUMBER
   13     | ABS term
   14     | OP exp CP


Grammar

    0 $accept: include_file $end

    1 include_file: INCLUDE LT ID GT


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 1
NUMBER (259)
STRING (260)
CHAR_CONST (261)
ADD (262)
SUB (263)
MUL (264)
DIV (265)
ABS (266)
MOD (267)
LT (268) 1
GT (269) 1
LEQ (270)
GEQ (271)
EQUAL_TO (272)
ASSIGN (273)
NOT (274)
UNSIGNED (275)
AND (276)
OR (277)
BITWISE_AND (278)
BITWISE_OR (279)
BITWISE_XOR (280)
OP (281)
CP (282)
LB (283)
RB (284)
INCREMENT (285)
DECREMENT (286)
EOL (287)
COLON (288)
PERIOD (289)
COMMA (290)
INT (291)
FLOAT (292)
CHAR (293)
DOUBLE (294)
IF (295)
ELSE (296)
WHILE (297)
FOR (298)
DO (299)
RETURN (300)
INCLUDE (301) 1


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
include_file (48)
    on left: 1, on right: 0


State 0

    0 $accept: . include_file $end

    INCLUDE  shift, and go to state 1

    include_file  go to state 2


State 1

    1 include_file: INCLUDE . LT ID GT

    LT  shift, and go to state 3


State 2

    0 $accept: include_file . $end

    $end  shift, and go to state 4


State 3

    1 include_file: INCLUDE LT . ID GT

    ID  shift, and go to state 5


State 4

    0 $accept: include_file $end .

    $default  accept


State 5

    1 include_file: INCLUDE LT ID . GT

    GT  shift, and go to state 6


State 6

    1 include_file: INCLUDE LT ID GT .

    $default  reduce using rule 1 (include_file)
